feat(verifactu): cerrar controles fiscales y preparacion de despliegue